# projeto-simuteste

./: README.md
taskmgr/: .coverage  .env  .env.example  README.md  mutmut.ini  pyproject.toml  report.html  requirements.txt  test_integration.db
taskmgr/app/: main.py
taskmgr/app/api/v1/: attachments.py  health.py  projects.py  tags.py  tasks.py  users.py
taskmgr/app/core/: config.py  deps.py  exceptions.py  logging_config.py
taskmgr/app/models/: db.py  entities.py  schemas.py
taskmgr/app/repositories/: attachment_repo.py  project_repo.py  tag_repo.py  task_repo.py  user_repo.py
taskmgr/app/services/: attachment_service.py  project_service.py  tag_service.py  task_service.py  user_service.py
taskmgr/data/: taskmgr.db
taskmgr/tests/functional/: test_api_projects.py  test_api_rules.py  test_api_tasks.py
taskmgr/tests/functional_black_box/: conftest.py  helpers.py  test_project_service.py  test_task_service.py
taskmgr/tests/integration/: conftest.py  test_api_integration.py  test_db_integration.py  test_project_progress.py  test_task_flow.py
taskmgr/tests/unit/: test_project_service.py  test_tag_repo.py  test_task_service.py  test_user_repo.py  test_validations.py
